// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogHost Tests Show MRS DB Object Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="mrsSchemaDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Object
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label sectionTitle"
            data-tooltip="expand"
          >
            Enter Configuration Values for the New MySQL REST Object
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service Path
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            selection="/mrs"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              /mrs
            </label>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Schema Path
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar dropdown valueEditor"
            id="schema"
            selection="/mrs_notes"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              /mrs_notes
            </label>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Database Object Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The name of the database object
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Request Path
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The path to access the object, has to start with /
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            CRUD Operations
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar tagInput dropdown multiSelect"
            id="crudOperations"
            selection="[object Set]"
            style="flex-direction: row; flex-wrap: wrap;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label tag"
              data-tooltip="expand"
              draggable="true"
            >
              READ
            </label>
          </div>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label cellDescription"
            data-tooltip="expand"
          >
            The CURD operations allowed for this database object
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Flags
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Enabled
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="requiresAuth"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Requires Authentication
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar selector horizontal tabArea stretched"
              style="flex-direction: row;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepDown"
                id="selectorItemstepDown"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem selected normal"
                id="page0"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Basic
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page1"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Parameters
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page2"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Advanced
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page3"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Options
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepUp"
                id="selectorItemstepUp"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Result Format
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar dropdown valueEditor"
                    id="crudOperationFormat"
                    selection="FEED"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      FEED
                    </label>
                  </div>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Items per Page
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="itemsPerPage"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Ownership Field
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar dropdown valueEditor"
                    id="rowUserOwnershipColumn"
                    selection="created_by"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      created_by
                    </label>
                  </div>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    Field that holds the user ID that should be managed by MRS
                  </label>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    User Ownership
                  </label>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg checkbox checked valueEditor"
                    id="rowUserOwnershipEnforced"
                    tabindex="0"
                  >
                    <span
                      __self="[object Object]"
                      __source="[object Object]"
                      class="checkMark"
                    />
                    Enforce Row User Ownership
                  </label>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    Enables the user ID management by MRS
                  </label>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Comments
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="comments"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Schema Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="mrsSchemaDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Schema Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            selection="localhost"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              localhost
            </label>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Request Path
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Items per Page
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="itemsPerPage"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Enabled
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Enabled
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Requires Authentication
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="requiresAuth"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Requires Authentication
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Options
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <textarea
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="options"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Service Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="mrsServiceDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Service Path
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="servicePath"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Host Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="hostName"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Supported Protocols
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar tagInput dropdown multiSelect"
            id="protocols"
            selection="[object Set]"
            style="flex-direction: row; flex-wrap: wrap;"
            tabindex="0"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service Flags
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="makeDefault"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Default
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Enabled
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: row; grid-column: span 8;"
        >
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar tabview top"
            style="flex-direction: column;"
          >
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar selector horizontal tabArea stretched"
              style="flex-direction: row;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepDown"
                id="selectorItemstepDown"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem selected normal"
                id="page0"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Authentication
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page1"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Authentication Apps
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem normal"
                id="page2"
                style="flex-direction: row; justify-content: center; align-items: center;"
              >
                <label
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg label"
                  data-tooltip="inherit"
                >
                  Options
                </label>
              </div>
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg container fixedScrollbar selectorItem stepUp"
                id="selectorItemstepUp"
                style="flex-direction: row; justify-content: center; align-items: center; display: none;"
              />
            </div>
            <div
              __self="[object Object]"
              __source="[object Object]"
              class="msg container fixedScrollbar content"
              style="flex-direction: column;"
            >
              <div
                __self="[object Object]"
                __source="[object Object]"
                class="msg grid"
                style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
              >
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Authentication Path:
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="authPath"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    The path used for authentication.
                  </label>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Redirection URL:
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="authCompletedUrl"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    The authentication workflow will redirect to this URL after successful- or failed login.
                  </label>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    App Redirection URL Validation:
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <input
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="authCompletedUrlValidation"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    A regular expression to validate the /login?onCompletionRedirect parameter set by the app.
                  </label>
                </div>
                <div
                  __self="[object Object]"
                  __source="[object Object]"
                  class="msg container fixedScrollbar gridCell"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
                >
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label valueTitle"
                    data-tooltip="expand"
                  >
                    Authentication Completed Page Content:
                  </label>
                  <div
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg container fixedScrollbar inputWithProgress"
                    style="flex-direction: row;"
                  >
                    <textarea
                      __self="[object Object]"
                      __source="[object Object]"
                      class="msg input valueEditor"
                      id="authCompletedPageContent"
                      spellcheck="true"
                      type="text"
                    />
                  </div>
                  <label
                    __self="[object Object]"
                    __source="[object Object]"
                    class="msg label cellDescription"
                    data-tooltip="expand"
                  >
                    If this field is set its content will replace the page content of the /completed page.
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show Prompt Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="shellPromptDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Feedback Requested
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Lorem ipsum dolor sit amet
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Standard Rendering (snapshot) 1`] = `
<DialogHost>
  <PasswordDialog
    key="passwordDialog"
  />
  <ValueEditDialog
    key="valueEditDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        Object {
          "begin": Array [],
          "end": Array [
            <Button
              caption="OK"
              disabled={false}
              id="ok"
              onClick={[Function]}
            />,
            <Button
              caption="Cancel"
              id="cancel"
              onClick={[Function]}
            />,
          ],
        }
      }
      caption={
        <y>
          <Icon
            disabled={false}
            src={388}
          />
          <Label />
        </y>
      }
      className="msg valueEditDialog"
      container={Object {}}
      content={
        <Grid
          columnGap={16}
          columns={8}
          rowGap={16}
        />
      }
      id=""
      onClose={[Function]}
    >
      <Portal
        container={Object {}}
        id=""
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
    <Menu
      onItemClick={[Function]}
      orientation="column"
      placement="right-start"
    >
      <Popup
        className="msg menu"
        onClose={[Function]}
        onKeyDown={[Function]}
        onOpen={[Function]}
        orientation="column"
        pinned={false}
        placement="right-start"
        showArrow={false}
      >
        <Portal
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
        />
      </Popup>
    </Menu>
  </ValueEditDialog>
  <ConfirmDialog
    key="confirmDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        Object {
          "end": Array [],
        }
      }
      caption={
        <y>
          <Icon
            disabled={false}
            src={275}
          />
          <Label>
            Confirm
          </Label>
        </y>
      }
      className="msg confirmDialog"
      container={Object {}}
      content={
        <Container
          orientation="column"
        >
          
          <Container
            className="description"
            orientation="column"
          />
        </Container>
      }
      onClose={[Function]}
    >
      <Portal
        container={Object {}}
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
  </ConfirmDialog>
  <MrsServiceDialog
    key="mrsServiceDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsServiceDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsServiceDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsServiceDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsServiceDialog>
  <MrsSchemaDialog
    key="mrsSchemaDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsSchemaDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsSchemaDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsSchemaDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsSchemaDialog>
  <MrsDbObjectDialog
    key="mrsDbObjectDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsSchemaDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsSchemaDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsSchemaDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsDbObjectDialog>
  <MrsContentSetDialog
    key="mrsContentSetDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsContentSetDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsContentSetDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsContentSetDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsContentSetDialog>
  <MrsAuthenticationAppDialog
    key="mrsAuthenticationAppDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsAuthenticationAppDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsAuthenticationAppDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsAuthenticationAppDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MrsAuthenticationAppDialog>
  <MdsHWClusterDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mdsHWClusterDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mdsHWClusterDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mdsHWClusterDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MdsHWClusterDialog>
  <MdsHWLoadDataDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mdsHWLoadDataDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mdsHWLoadDataDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mdsHWLoadDataDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
      <Menu
        onItemClick={[Function]}
        orientation="column"
        placement="right-start"
      >
        <Popup
          className="msg menu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="right-start"
          showArrow={false}
        >
          <Portal
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </ValueEditDialog>
  </MdsHWLoadDataDialog>
</DialogHost>
`;
